TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add filtering to WMI module
 * Fix WMI module
 * Fix PDH problems
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Add option to recheck DNS in real time

2006-02-22 MickeM
 + Added debug output to see if the socket is bound and/or has shutdown.
 * Fixed a potential bug in the threadmanager.
 + Added configuration option for suppressing performance datat to the NRPE section.
   Set performance_data=0 to stop sendoing performancedata to nagios
 + New (better?) (simpler?) eventlog checking
 + Added option to most commands (ignore-perf-data) to suppres performance data
 + Added option CheckAll for checking all auto-start services to checkServiceState.
   Also an exclude=<service> to exclude checking that.
 * Fixed return syntax for PROCSTATE nsclient

2006-02-21 MickeM
 * Fixed "broken password check" (again) in NSClient listener (this time it is correct! :)

2006-12-02 MickeM
 + Managed to build so it works on NT 4.0 (SP6a) and W2K3
 * Fixed "broken password check" in NSClient listener

2006-11-18 MickeM
 + Added support for empty NRPE checking (i.e.. chec_nrpe without a -c argument)
 * Added error message when detected language is missing from counters.defs
 + Added Swedish locale to counters.defs (yes, I switched to Swedish XP on my computer :)
 * Fixed : (and possibly other problems) in counters when checking from check_nt (via NSCLient protocol)
 + Added CheckAllExcept to CheckDrive to check all except the specified drives.
 * Fixed a display error in the variouse size functions (1000-1024 byte was displayed incorrectly)

2006-10-05 MickeM
 * Yayyy!!! (first fix in a looong while :)
 * Fixed a W2k3 "bug" (actually just an incorrect error) but the:
   "e .\PDHCollector.cpp(130) Failed to query performance counters..." is no more...